force-app/main/default/objects/Location__c/Location__c.object-meta.xml
<CustomObject>
    <description>Location defines a location and its type, address, and the Retailer is it associated with. Location is related to Retailer, Job, and Project Location.</description>
    <label>Location</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>