force-app/main/default/objects/Location__c/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <label>Address 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>