force-app/main/default/objects/Location__c/fields/Banner__c.field-meta.xml
<CustomField>
    <fullName>Banner__c</fullName>
    <label>Store Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Banner XYZ</fullName>
                <default>true</default>
                <label>Banner XYZ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>