force-app/main/default/objects/Location__c/fields/GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>GeoLocation__c</fullName>
    <label>Geo Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>