force-app/main/default/objects/Location__c/fields/Group1__c.field-meta.xml
<CustomField>
    <fullName>Group1__c</fullName>
    <description>Market for EMS</description>
    <label>Group 1</label>
    <length>140</length>
    <type>Text</type>
</CustomField>