force-app/main/default/objects/Location__c/fields/LocationNumber__c.field-meta.xml
<CustomField>
    <fullName>LocationNumber__c</fullName>
    <label>Location Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>