force-app/main/default/objects/Location__c/fields/LocationReference1__c.field-meta.xml
<CustomField>
    <fullName>LocationReference1__c</fullName>
    <label>Location Reference 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>