force-app/main/default/objects/Location__c/fields/OneHubLocationID__c.field-meta.xml
<CustomField>
    <fullName>OneHubLocationID__c</fullName>
    <description>This is crossmark location identifier.</description>
    <externalId>true</externalId>
    <label>OneHub Location ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>