force-app/main/default/objects/Location__c/fields/OneHubRetailerId__c.field-meta.xml
<CustomField>
    <fullName>OneHubRetailerId__c</fullName>
    <label>OneHub Retailer ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>