force-app/main/default/objects/Location__c/fields/Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Supervisor/ROM etc.</description>
    <label>Operations Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Managed Locations</relationshipLabel>
    <relationshipName>Managed_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>