force-app/main/default/objects/Location__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Children</relationshipLabel>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>