force-app/main/default/objects/Location__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Postal Code</label>
    <referenceTo>PostalCode__c</referenceTo>
    <relationshipLabel>Locations (Postal Code)</relationshipLabel>
    <relationshipName>Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>