force-app/main/default/objects/Location__c/fields/PostalCodeName__c.field-meta.xml
<CustomField>
    <fullName>PostalCodeName__c</fullName>
    <formula>PostalCode__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code Name</label>
    <type>Text</type>
</CustomField>