force-app/main/default/objects/Location__c/fields/ProjectCoordinator__c.field-meta.xml
<CustomField>
    <fullName>ProjectCoordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>