force-app/main/default/objects/Location__c/fields/RetailerAccount__c.field-meta.xml
<CustomField>
    <fullName>RetailerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Retailer Account</description>
    <label>Retailer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>RetailerAccount</relationshipName>
    <type>Lookup</type>
</CustomField>