force-app/main/default/objects/Location__c/fields/RetailerParent__c.field-meta.xml
<CustomField>
    <fullName>RetailerParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retailer Parent</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Locations (Retailer Parent)</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>