force-app/main/default/objects/Location__c/fields/StoreManager__c.field-meta.xml
<CustomField>
    <fullName>StoreManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>