force-app/main/default/objects/Location__c/validationRules/RetailerNull.validationRule-meta.xml
<ValidationRule>
    <fullName>RetailerNull</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Retailer__c )</errorConditionFormula>
    <errorDisplayField>Retailer__c</errorDisplayField>
    <errorMessage>Retailer cannot be empty</errorMessage>
</ValidationRule>