force-app/main/default/objects/Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LocationNumber__c</field>
        <operation>contains</operation>
        <value>111</value>
    </filters>
    <label>All</label>
</ListView>